--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <img class="img" src="1.jpg">
         </div>     
     </div>
-    <a href="myScript.php">click</a>
+    <a href="/myScript.php">click</a>
     
 
     
